@@ -58,3 +58,5 @@
 - Properly track leaf-bladed sword drops in ::stats command
 - Make broad bolts tradeable and fix their ranged strength
 < ---- ABOVE Released NOVEMBER 22, 2021 https://gitlab.com/2009scape/2009scape/-/tags/Nov-22-2021 ---- >
+- Animations for passing through Isafdar Dense Forest added
+- Implement Wire Traps, Leaf Traps, and Stick Traps in Isafdar
